# docpilot-ai

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  migration_test_output.txt  mypy_output.txt  out.txt  out2.txt  out3.txt  out4.txt  pyproject.toml  pytest_full_output.txt  pytest_output.txt
backend/alembic/: env.py
backend/alembic/versions/: 000_initial_schema.py  001_add_document_content.py  002_add_processing_job_stages.py  20260716_2041_a00e5f9d1c88_add_ingestion_report.py  20260718_1258_ef16e53f04f2_add_document_ids_to_chat_sessions.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/chat/: __init__.py
backend/app/chunking/: __init__.py
backend/app/core/: bootstrap.py  config.py  constants.py  exceptions.py  logging.py  security.py
backend/app/db/: base.py  migration_verification.py  session.py  unit_of_work.py
backend/app/dependencies/: common.py
backend/app/embeddings/: __init__.py
backend/app/ingestion/: __init__.py
backend/app/jobs/: __init__.py
backend/app/middleware/: cors.py  error_handler.py
backend/app/models/: __init__.py  audit_mixin.py  chat_message.py  chat_session.py  document.py  document_chunk.py  document_content.py  enums.py  file_metadata.py  processing_job.py  soft_delete.py  user.py
backend/app/repositories/: base.py  exceptions.py
backend/app/retrieval/: __init__.py
backend/app/schemas/: __init__.py  auth.py  chat.py  common.py  (+7 more)
backend/scratch/: debug_chat.py  debug_chat2.py  debug_chat_real.py  debug_local_chat.py  final_patch.py  force_ignore_mypy.py  patch_settings.py  patch_test_chat_service.py  patch_test_conversations.py  patch_tests.py  patch_two_tests.py  rewrite_test_conversations.py  test_api_match.py  test_api_running.py  test_api_running2.py  test_api_session.py  test_api_with_doc.py
backend/tools/: rebuild_index.py  run_migrations.py
backend/versions/: 003_add_summary_to_document_content.py
(+395 files in other folders)
